// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the fallback avatar when there is no url 1`] = `
<ValidationInput
  description="onboarding.create_organization.avatar.description"
  id="organization-avatar"
  isInvalid={false}
  isValid={false}
  label="onboarding.create_organization.avatar"
>
  <OrganizationAvatar
    className="display-block spacer-bottom"
    organization={
      Object {
        "avatar": undefined,
        "name": "Luke Skywalker",
      }
    }
  />
  <input
    className="input-super-large text-middle"
    id="organization-avatar"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="onboarding.create_organization.avatar.placeholder"
    type="text"
    value=""
  />
</ValidationInput>
`;

exports[`should render correctly 1`] = `
<ValidationInput
  description="onboarding.create_organization.avatar.description"
  id="organization-avatar"
  isInvalid={false}
  isValid={false}
  label="onboarding.create_organization.avatar"
>
  <OrganizationAvatar
    className="display-block spacer-bottom"
    organization={
      Object {
        "avatar": "https://my.avatar",
        "name": "",
      }
    }
  />
  <input
    className="input-super-large text-middle"
    id="organization-avatar"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="onboarding.create_organization.avatar.placeholder"
    type="text"
    value="https://my.avatar"
  />
</ValidationInput>
`;

exports[`should render correctly 2`] = `true`;
